--- a/recruit-gui/src/app/accounts/accounts.component.html
+++ b/recruit-gui/src/app/accounts/accounts.component.html
@@ -17,7 +17,7 @@
 		   <li class="nav-item tabNav">
 		    <span class="nav-link" (click)="switchTab('subscriptionActions')">{{'arenella-accounts-menu-subscription' | translate}}</span>
 		  </li>
-		  <li class="nav-item tabNav">
+		  <li class="nav-item tabNav hideForMob">
 		    <span class="nav-link" (click)="switchTab('cities')">{{'arenella-accounts-menu-cities' | translate}}</span>
 		  </li>
 		</ul>
