--- a/recruit-gui/src/app/recruiter-account/recruiter-account.component.css
+++ b/recruit-gui/src/app/recruiter-account/recruiter-account.component.css
@@ -280,4 +280,50 @@
 	.account-details table{
 	width:100%;
 	}
+	
+	.container-div{
+	margin:0px;	
+	}
+
+	.center {
+  		margin: auto;
+  		
+	}
+	
+	.center {
+  		width: 95%;
+  		margin-left:0px;
+		margin-right:0px;  		
+	}
+	
+	.sub-opt-div{
+		float:left;
+		width:100%;
+		border:2px solid grey;
+		padding:10px;
+		text-align:center;
+		min-height:420px;
+	}
+
+	.sub-opt-div-mob{
+		width:100%;
+		height:550px;
+		margin:0px;
+		margin-bottom:20px;
+	}
+
+	.sub-opt-div p{
+		text-align:left;
+		min-height:80px;
+	}
+
+	.sub-opt-div ul{
+		text-align:left;
+		height:140px;
+	}
+
+	.sub-opt-div-mob ul{
+		text-align:left;
+		height:200px;
+	}
 }
