--- a/recruit-gui/src/app/suggestions/searchbar/searchbar.component.html
+++ b/recruit-gui/src/app/suggestions/searchbar/searchbar.component.html
@@ -25,7 +25,7 @@
 					</td>
 					
 				</tr>
-				<tr *ngIf="isAuthenticatedAsAdmin()">
+				<tr *ngIf="currentUserAuth.isAdmin()">
 					<td class="sugg-srch-hdr">{{'arenella-suggestions-location' | translate}}</td>
 					<td *ngIf="!showLocationFilters">
 						<p class="toggle-filter-option" (click)="switchLocationFilterView('showLocationFilters')">{{'Show' | translate}}..</p>
@@ -122,7 +122,7 @@
 					</td>
 					<div *ngIf="showIncludeFilters">
 						<p class="toggle-filter-option" (click)="switchIncludeFilterView('')">{{'Hide' | translate}}..</p>
-						<div class="geo-code-filter geo-code-selected-{{includeUnavailableCandidatesSelected}}" (click)="doPaidSubscriptionCheckUnavailableCandidates()" *ngIf="isAdmin() || hasPaidSubscription()">
+						<div class="geo-code-filter geo-code-selected-{{includeUnavailableCandidatesSelected}}" (click)="doPaidSubscriptionCheckUnavailableCandidates()" *ngIf="currentUserAuth.isAdmin() || hasPaidSubscription()">
 							{{'arenella-suggestions-include-unavailable-candidates' | translate}}
 						</div>
 						<div class="geo-code-filter geo-code-selected-{{includeRequiresSponsorshipCandidatesSelected}}" (click)="doPaidSubscriptionCheckRequiresSponsorshipCandidates()">
