--- a/recruit-gui/src/app/suggestions/suggestions.component.two.css
+++ b/recruit-gui/src/app/suggestions/suggestions.component.two.css
@@ -95,6 +95,11 @@
 	text-align: right;
 }
 
+.sugg-srch-job-title-name{
+	margin-right:20px;
+	min-width:500px;
+}
+
 textarea {
     width:100%;
     height:200px;
