--- a/recruit-gui/src/app/suggestions/searchbar/searchbar.component.css
+++ b/recruit-gui/src/app/suggestions/searchbar/searchbar.component.css
@@ -62,9 +62,14 @@
 }
 
 .sugg-srch-ctry-chkbox{
-	display:inline;
-	margin:0;
-	padding:0;
+	display:inline-block;
+	margin:0px;
+	padding:0px;
+	width:200px;
+}
+
+.lang-checkbox{
+	margin:5px;
 }
 
 .min{
@@ -236,5 +241,6 @@
 	.loc-item-left{
 		margin-left:10px;
 	}
+	
 	
 }
