--- a/recruit-gui/src/app/suggestions/searchbar/searchbar.component.html
+++ b/recruit-gui/src/app/suggestions/searchbar/searchbar.component.html
@@ -104,7 +104,7 @@
 					<td class="sugg-srch-bdy" *ngIf="showLanguageFilters">
 						<p class="toggle-filter-option" (click)="switchLanguageFilterView('')">{{'Hide' | translate}}..</p>
 						<ul class="sugg-srch-ctry-ul">
-							<li class="sugg-srch-ctry-chkbox" *ngFor="let lang of supportedLanguages"><input type="checkbox" [formControlName]="lang.languageCode.toLowerCase()+'Language'" class="lang-checkbox">{{'arenella-suggestions-' + lang.languageCode.toLowerCase() | translate}}</li>
+							<li class="sugg-srch-ctry-chkbox" *ngFor="let lang of supportedLanguages"><input type="checkbox" [formControlName]="lang.languageCode.toLowerCase()+'Language'" class="lang-checkbox">{{lang.languageCode | translate}}</li>
 						</ul>					
 					</td>
 				</tr>
