--- a/recruit-gui/src/app/accounts/subscriptions/subscriptions.component.html
+++ b/recruit-gui/src/app/accounts/subscriptions/subscriptions.component.html
@@ -69,6 +69,10 @@
 					<td>{{selectedSubscriptionAction.subscriptionId}}</td>
 				</tr>
 				<tr>
+					<th>Subscription Created</th>
+					<td>{{selectedSubscriptionAction.created | date: 'dd / MM / yyyy'}}</td>
+				</tr>
+				<tr>
 					<th>Invoice Type</th>
 					<td>{{selectedSubscriptionAction.invoiceType}}</td>
 				</tr>
