--- a/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.html
+++ b/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.html
@@ -86,8 +86,11 @@
 								<span title="{{openPosition.country}}" class="flag-icon flag-icon-{{getCountryCode(openPosition.country)}} suggestion-flag-country listing-country"></span>	
 							</td>
 							
-							<td class="table-bdy-td td-date closing-date-marketplace"  (click)="viewOpenPosition(openPosition)" *ngIf="!showJustMyOpenPositionsActive && (openPosition.viewed || !isNotMineOP(openPosition))">{{openPosition.positionClosingDate | date: 'dd/MM/yyyy'}}</td>
-							<td class="table-bdy-td td-date closing-date-marketplace" (click)="viewOpenPosition(openPosition)" *ngIf="!showJustMyOpenPositionsActive && !openPosition.viewed && isNotMineOP(openPosition)"><b>{{openPosition.positionClosingDate | date: 'dd/MM/yyyy'}}</b></td>
+							<td class="table-bdy-td td-date closing-date-marketplace">
+								<span (click)="viewOpenPosition(openPosition)" *ngIf="!showJustMyOpenPositionsActive && hasValidClosingDate(openPosition) && (openPosition.viewed || !isNotMineOP(openPosition))">{{openPosition.positionClosingDate | date: 'dd/MM/yyyy'}}</span>
+								<span (click)="viewOpenPosition(openPosition)" *ngIf="!showJustMyOpenPositionsActive && hasValidClosingDate(openPosition) && !openPosition.viewed && isNotMineOP(openPosition)"><b>{{openPosition.positionClosingDate | date: 'dd/MM/yyyy'}}</b></span>
+							</td>
+							
 						</tr>
 						
 					</tbody>	
@@ -214,31 +217,6 @@
 							<select formControlName="country">
 								<option *ngFor="let opt of countryOptions" [ngValue]="opt.value">{{opt.label}}</option>
 							</select>
-							<!-- 				
-							<select formControlName="country">
-								<option></option>
-								<option *ngFor="let country of supportedCountries" value="{{country.name}}">{{country.name}}</option>
-							<!--  
-								
-								<option value="BELGIUM">{{'arenella-recruiter-mp-add-belgium' | translate}}</option>
-								<option value="IRELAND">{{'arenella-recruiter-mp-add-ireland' | translate}}</option>
-								<option value="NETHERLANDS">{{'arenella-recruiter-mp-add-netherlands' | translate}}</option>
-								<option value="UK">{{'arenella-recruiter-mp-add-uk' | translate}}</option>
-								<option value="EU_REMOTE">{{'arenella-recruiter-mp-add-eu' | translate}}</option>
-								<option value="WORLD_REMOTE">{{'arenella-recruiter-mp-add-world' | translate}}</option>
-								-->
-							<!--  </select>-->
-							<!--  
-							<select formControlName="country">
-								<option></option>
-								<option value="BELGIUM">{{'arenella-recruiter-mp-update-belgium' | translate}}</option>
-								<option value="IRELAND">{{'arenella-recruiter-mp-update-ireland' | translate}}</option>
-								<option value="NETHERLANDS">{{'arenella-recruiter-mp-update-netherlands' | translate}}</option>
-								<option value="UK">{{'arenella-recruiter-mp-update-uk' | translate}}</option>
-								<option value="EU_REMOTE">{{'arenella-recruiter-mp-update-eu' | translate}}</option>
-								<option value="WORLD_REMOTE">{{'arenella-recruiter-mp-update-world' | translate}}</option>
-							</select>
-							-->
 						</td>	
 					</tr>
 					<tr>
@@ -283,7 +261,7 @@
 					</tr>
 					<tr>
 						<td>{{'arenella-recruiter-mp-update-closing' | translate}}</td>
-						<td>
+						<td >
 							<input formControlName="positionClosingDate" type="date"/>
 						</td>	
 					</tr>
