statistics - new searches page

--- a/recruit-gui/src/app/accounts/subscriptions/subscriptions.component.html
+++ b/recruit-gui/src/app/accounts/subscriptions/subscriptions.component.html
@@ -49,12 +49,8 @@
 		<div class="subscription-details">
 			<table class="subscription-details-table">
 				<tr>
-					<th>Recruiter Id</th>
-					<td>{{selectedSubscriptionAction.userId}}</td>
-				</tr>
-				<tr>
-					<th>Name</th>
-					<td>{{selectedSubscriptionAction.firstName + " " + selectedSubscriptionAction.surname}}</td>
+					<th>Recruiter</th>
+					<td><b>{{selectedSubscriptionAction.userId}}</b> {{selectedSubscriptionAction.firstName + " " + selectedSubscriptionAction.surname}}</td>
 				</tr>
 				<tr>
 					<th>Email</th>
