--- a/recruit-gui/src/app/statistics/statistics.component.html
+++ b/recruit-gui/src/app/statistics/statistics.component.html
@@ -22,6 +22,9 @@
 			  <li class="nav-item statsChartTab">
 			    <span class="nav-link" (click)="switchTab('newCandidateStats')">{{'arenella-stats-new-candidates' | translate}}</span>
 			  </li>
+			  <li class="nav-item statsChartTab">
+			    <span class="nav-link" (click)="switchTab('searches')">{{'arenella-stats-searches' | translate}}</span>
+			  </li>
 			</ul>
 		</div>
 		
@@ -32,15 +35,67 @@
 				<button class="btn btn-secondary arenella-btn" (click)="refreshData()" download>{{'arenella-stats-btn-refresh' | translate}}</button>
 			</div>
 				
+			<!-- Searches -->		
+			<div *ngIf="showSearches">
+			
+				<!-- Logins -->
+				<div>
+					<h3>{{'arenella-stats-logins-recruiters' | translate}} {{loginCountRecruiter}} {{'arenella-stats-logins-candidates' | translate}}: {{loginCountCandidate}}</h3>
+					<button (click)="switchSearchStats('week')">{{'arenella-stats-logins-btn-this-week' | translate}}</button>
+					<button (click)="switchSearchStats('today')">{{'arenella-stats-logins-btn-today' | translate}}</button>
+				</div>	
+						
+				<div class="chart-wrapper-page">		
+					
+					<div class="chart-wrapper">
+						<div class="login-table-view">
+							<table style="width:100%">
+								<thead>
+									<tr>
+										<th>{{'arenella-stats-logins-user' | translate}}</th>
+									</tr>
+								</thead>
+								<tbody>  
+									<tr *ngFor="let user of recruiterLoginsChartLabels" (click)="switchUserStatsView('table', user)">
+										<td>{{user}}</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+					</div>
+					<div class="chart-wrapper" >
+						<h3>{{'arenella-stats-searches' | translate}}</h3>
+						<div class="login-table-view">
+						<table style="width:100%">
+								<thead>
+									<tr>
+										<th>{{'arenella-stats-searches-country' | translate}}</th>
+										<th>{{'arenella-stats-searches-function' | translate}}</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr *ngFor="let search of recruiterStats.uniqueSearches">
+										
+										<td class="flag-icon flag-icon-{{getIso2Code(search.country)}} suggestion-flag-country listing-country"></td>
+										<td>{{getFunctionLabel(search.function)}}</td>
+									</tr>
+								</tbody>
+							</table>
+							
+						</div>
+					</div>
+				</div>
+				<div style="clear:both;margin-bottom:50px;"></div>
+			</div>
+			
 			<!--  Define charts -->
 			<div >
 				<div class="stat-canvas">
 					<!-- Logins -->
 					<div *ngIf="showStatsLogins">
-						<h3>{{'arenella-stats-logins-title' | translate}}</h3>
-						<button (click)="switchLoginStats('year')">{{'arenella-stats-logins-btn-year' | translate}}</button>
-						<button (click)="switchLoginStats('3months')">{{'arenella-stats-logins-btn-3-months' | translate}}</button>
-						<button (click)="switchLoginStats('week')">{{'arenella-stats-logins-btn-week' | translate}}</button>
+						<h3>{{'arenella-stats-logins-recruiters' | translate}} {{loginCountRecruiter}} {{'arenella-stats-logins-candidates' | translate}}: {{loginCountCandidate}}</h3>
+						<button (click)="switchUserStats('week')">{{'arenella-stats-logins-btn-this-week' | translate}}</button>
+						<button (click)="switchUserStats('today')">{{'arenella-stats-logins-btn-today' | translate}}</button>
 					</div>
 					<!-- Downloads -->
 					<div *ngIf="showStatsDownloads" style="margin-bottom:45px;">
@@ -67,13 +122,7 @@
 				</div>
 				
 				<div class="stat-canvas">
-					<!-- Logins -->
-					<div *ngIf="showStatsLogins">
-						<h3>{{'arenella-stats-logins-recruiters' | translate}} {{loginCountRecruiter}} {{'arenella-stats-logins-candidates' | translate}}: {{loginCountCandidate}}</h3>
-						<button (click)="switchUserStats('week')">{{'arenella-stats-logins-btn-this-week' | translate}}</button>
-						<button (click)="switchUserStats('today')">{{'arenella-stats-logins-btn-today' | translate}}</button>
-					</div>	
-						
+					
 					<!-- Downloads -->
 					<div *ngIf="showStatsDownloads">
 						<h3>{{'arenella-stats-recruiter-downloads' | translate}}: {{chartDownloadsTotal}}</h3>
@@ -136,56 +185,7 @@
 						<canvas  id="rightChart">{{ rightChart }}</canvas>	
 					</div>
 				</div>
-			</div>
-	
-			<!-- Logins -->		
-			<div *ngIf="showStatsLogins">
-						
-				<div class="chart-wrapper-page">		
-					
-					<div class="chart-wrapper">
-						<div class="login-table-view">
-							<table style="width:100%">
-								<thead>
-									<tr>
-										<th>{{'arenella-stats-logins-user' | translate}}</th>
-									</tr>
-								</thead>
-								<tbody>  
-									<tr *ngFor="let user of recruiterLoginsChartLabels" (click)="switchUserStatsView('table', user)">
-										<td>{{user}}</td>
-									</tr>
-								</tbody>
-							</table>
-						</div>
-					</div>
-					<div class="chart-wrapper" >
-						<h3>{{'arenella-stats-searches' | translate}}</h3>
-						<button (click)="switchUserStats('week')">{{'arenella-stats-searches-btn-week' | translate}}</button>
-						<button (click)="switchUserStats('today')">{{'arenella-stats-searches-btn-today' | translate}}</button>
-						<div class="login-table-view">
-						<table style="width:100%">
-								<thead>
-									<tr>
-										<th>{{'arenella-stats-searches-country' | translate}}</th>
-										<th>{{'arenella-stats-searches-function' | translate}}</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr *ngFor="let search of recruiterStats.uniqueSearches">
-										
-										<td class="flag-icon flag-icon-{{getIso2Code(search.country)}} suggestion-flag-country listing-country"></td>
-										<td>{{getFunctionLabel(search.function)}}</td>
-									</tr>
-								</tbody>
-							</table>
-							
-						</div>
-					</div>
-				</div>
-				<div style="clear:both;margin-bottom:50px;"></div>
-			</div>
-			  
+			</div>		  
 		</div>
 	</div>
 </div>
