--- a/recruit-gui/src/app/accounts/recruiters/recruiters.component.css
+++ b/recruit-gui/src/app/accounts/recruiters/recruiters.component.css
@@ -41,10 +41,12 @@ h3{
 
 .recruiter-credit-based-subscription{
 	color:purple;
+	cursor:pointer;
 }
 
 .recruiter-active-subscription{
 	color:green;
+	cursor:pointer;
 }
 
 .recruiter-expired-subscription{
@@ -95,6 +97,38 @@ h3{
 
 .acc-rec-tog-btn{
 	margin-left:10px;
+}
+
+.recruiter-activity-level-High{
+	background:green; 
+	border:2px solid grey; 
+	padding:5px;
+	width:50px;
+	display:block;	
+}
+
+.recruiter-activity-level-Medium{
+	background:orange; 
+	border:2px solid grey; 
+	padding:5px;
+	width:50px;
+	display:block;	
+}
+
+.recruiter-activity-level-Low{
+	background:red; 
+	border:2px solid grey; 
+	padding:5px;
+	width:50px;
+	display:block;	
+}
+
+.recruiter-activity-level-Nne{
+	background:grey; 
+	border:2px solid grey; 
+	padding:5px;
+	width:50px;
+	display:block;	
 }
 
 @media (max-width:700px)  {
