--- a/recruit-gui/src/app/accounts/recruiters/recruiters.component.html
+++ b/recruit-gui/src/app/accounts/recruiters/recruiters.component.html
@@ -6,12 +6,12 @@
 		<tbody>
 			<tr>
 				<td class="recruiter-active-subscription">{{'arenella-accounts-tabrecruiters-paid-subscriptions' | translate}}</td>
-				<td class="recruiter-active-subscription">{{activePaidSubscription.length}}</td>
+				<td class="recruiter-active-subscription">{{activePaidSubscription.keys.length}}</td>
 				<td><button class="btn btn-secondary acc-rec-tog-btn" (click)="toggleShowActivePaidSubscription()">{{'arenella-accounts-tabrecruiters-toggle' | translate}}</button></td>
 			</tr>
 			<tr>
 				<td class="recruiter-credit-based-subscription">{{'arenella-accounts-tabrecruiters-credit-based' | translate}}</td>
-				<td class="recruiter-credit-based-subscription">{{creditBasedSubscription.length}}</td>
+				<td class="recruiter-credit-based-subscription">{{creditBasedSubscription.keys.length}}</td>
 				<td><button class="btn btn-secondary acc-rec-tog-btn" (click)="toggleShowCreditBasedSubscription()">{{'arenella-accounts-tabrecruiters-toggle' | translate}}</button></td>
 			</tr>
 			<tr>
@@ -27,7 +27,7 @@
       				<!-- Table Headers -->
       				<th class="bg-tab-hdr">{{'arenella-accounts-tabcandidates-id' | translate}}</th>
       				<th class="bg-tab-hdr">{{'arenella-accounts-tabcandidates-name' | translate}}</th>
-      				<th class="bg-tab-hdr">Activity</th>
+      				<th class="bg-tab-hdr">Activity {{getPercentActiveInactive()}}</th>
       			</tr>
 	      	</thead>
 	      	<tbody>
@@ -45,7 +45,7 @@
             	    </td>	
       			</tr>
       			-->
-      			<ng-container *ngFor="let recruiter of activePaidSubscription" class="recruiter-active-subscription">
+      			<ng-container *ngFor="let recruiter of activePaidSubscription.keys()" class="recruiter-active-subscription">
 	      			<tr  class="recruiter-active-subscription" (click)="toggleRecruiterDetails(recruiter)">
 	      				<td *ngIf="showActivePaidSubscription" class="candidate-tab-col medicol"><span class="candidate-id-prefix"></span>{{recruiter.userId}}</td>
 	            	    <td *ngIf="showActivePaidSubscription" class="candidate-tab-col medicol"> {{recruiter.firstName}} {{recruiter.surname}}</td>
@@ -83,7 +83,7 @@
 						</td>
 	      			</tr>
       			</ng-container>
-      			<ng-container *ngFor="let recruiter of creditBasedSubscription">
+      			<ng-container *ngFor="let recruiter of creditBasedSubscription.keys()">
 	      			<tr  class="recruiter-credit-based-subscription" (click)="toggleRecruiterDetails(recruiter)">
 	      				<td *ngIf="showCreditBasedSubscription" class="candidate-tab-col medicol"><span class="candidate-id-prefix"></span>{{recruiter.userId}}</td>
 	            	    <td *ngIf="showCreditBasedSubscription" class="candidate-tab-col medicol"> {{recruiter.firstName}} {{recruiter.surname}}</td>
